# Beetstream

./: LICENSE  README.md  missing-endpoints.md  requirements.txt  setup.cfg
beetsplug/beetstream/: __init__.py  albums.py  artists.py  coverart.py  dummy.py  playlistprovider.py  playlists.py  search.py  songs.py  stream.py  users.py  utils.py
beetsplug/subsonic/: __init__.py  albums.py  artists.py  dummy.py  search.py  songs.py  users.py  utils.py
