[metadata]
name = Beetstream
version = 1.0.1
author = Binary Brain
author_email = me@sachabron.ch
description =  Beets.io plugin that expose SubSonic API endpoints, allowing you to stream your music everywhere.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BinaryBrain/Beetstream
project_urls =
    Bug Tracker = https://github.com/BinaryBrain/Beetstream/issues
classifiers =
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    Topic :: Multimedia :: Sound/Audio :: Players
    License :: OSI Approved :: MIT License
    Framework :: Flask

[options]
packages = find:
python_requires = >=3.8
install_requires =
    flask >= 1.1.2
    flask_cors >= 3.0.10
    Pillow >= 8.4.0

[options.packages.find]
